# substrate-node-template

pallets/template/: Cargo.toml
